--- a/app/src/main/res/drawable/bg_red_button.xml
+++ b/app/src/main/res/drawable/bg_red_button.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:bottom="6dp"
+        android:drawable="@drawable/bg_red"
+        android:top="6dp" />
+</layer-list>
