--- a/app/src/main/res/drawable/bg_transparent_border.xml
+++ b/app/src/main/res/drawable/bg_transparent_border.xml
@@ -1,4 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/blackShaded">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/blackShaded" />
+            <corners android:radius="4dp" />
+        </shape>
+    </item>
 
-</selector>
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <padding android:left="6dp" android:right="6dp"/>
+            <stroke android:color="@color/black" android:width="1dp"/>
+            <solid android:color="@color/transparent" />
+            <corners android:radius="4dp" />
+        </shape>
+    </item>
+</ripple>
