--- a/app/src/main/res/layout/item_feedback.xml
+++ b/app/src/main/res/layout/item_feedback.xml
@@ -14,17 +14,20 @@
         android:textStyle="bold"
         android:textColor="#000000"
         android:layout_marginTop="8dp"
-        android:text="What do you think about the app?"
+        android:text="@string/what_do_you_think_about_the_app"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/tellUsBtn"
-        android:layout_marginTop="26dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TELL US"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/bg_red_button"
+        android:text="@string/tell_us"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/textView5"
