--- a/app/src/main/res/layout/item_two_days_delivery.xml
+++ b/app/src/main/res/layout/item_two_days_delivery.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Free 2-day delivery"
+        android:text="@string/free_2_day_delivery"
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold"
@@ -44,18 +44,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:text="No membership fee. Millions of items."
+        android:text="@string/no_membership_fee_millions_of_items"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
+        android:background="@drawable/bg_transparent_border"
         android:id="@+id/startShoppingBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:text="START SHOPPING"
+        android:layout_height="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/start_shopping"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
