--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#0A1E40</color>
     <color name="colorAccent">#F3BC50</color>
     <color name="black">#000000</color>
+    <color name="blackShaded">#55000000</color>
+    <color name="red">#E44A41</color>
+    <color name="redDarker">#5C0F09</color>
+    <color name="white">#FFFFFF</color>
+    <color name="transparent">#FFFFFF</color>
 </resources>
